# bookmark-research-engine

./: .gitignore  .mcp.json  CLAUDE.md  README.md  bre.yaml.example  pyproject.toml
.claude-plugin/: hooks.json  plugin.json
docs/: plan.md  resources.md
skills/bookmark-sync/: SKILL.md
skills/bookmark-sync/examples/: approval-file.md
skills/bookmark-sync/references/: deepdive-agent-prompt.md  guidance-template.md  pending-json-schema.md  report-format.md  setup-guide.md
skills/bookmark-sync/scripts/: list-pending.sh  status.sh
src/bre/: __init__.py  cli.py  config.py  enricher.py  fetcher.py  state.py  twitter.py
tests/: test_enricher.py  test_state.py  test_twitter.py
